# temperature-controller

./: .gitignore  CHANGELOG.md  ControlPanel.pyw  ControlPanel.ui  ControlPanelLECO.pyw  README.md  TemperatureController.py  controller.py  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
controllerData/: Setup.sh  connectionData-sample.py  connectionData.py  connectionData_sample.py  ioDefinition.py  listener.py  sensors-sample.py  sensors.py  stopController.py  temperature-controller.service.template
data/: Settings.py  Settings.ui  __init__.py  controller_director.py  listener.py  sensors.py
devices/: intercom.py
tests/: TemperatureController_test.py  conftest.py  ioDefinition_test.py  listener_test.py  test_TemperatureController.py
