[project]
name = "temperature-controller"
authors = [
  { name="Benedikt Burger" },
]
dynamic = ["version"]

requires-python = ">=3.9"
dependencies = [
  "numpy",
  "psycopg2",
  "qtpy",
  "pyleco",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[ruff]
select = ["E", "F", "W"]
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "build",
    "dist",
    "docs/conf.py",
]
